--- a/artifacts/linting_rules/.spectral.yml
+++ b/artifacts/linting_rules/.spectral.yml
@@ -40,7 +40,7 @@ rules:
   typed-enum: true
   oas3-api-servers: true
   oas3-examples-value-or-externalValue: true
-  oas3-operation-security-defined: true
+  oas3-operation-security-defined: false
   oas3-parameter-description: false
   oas3-schema: true
   oas3-server-not-example.com: false
