--- a/artifacts/linting_rules/.github/workflows/spectral_oas_lint.yml
+++ b/artifacts/linting_rules/.github/workflows/spectral_oas_lint.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Git Checkout
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0 # If you use VALIDATE_ALL_CODEBASE = true, you can remove this line to improve performances
@@ -33,20 +33,4 @@ jobs:
       - name: Install Spectral functions
         run: npm install -g @stoplight/spectral-functions
       - name: Run spectral:oas Spectral Linting
-        run: spectral lint code/API_definitions/*.yaml --verbose --ruleset .spectral.yml > spectral.log 2>&1
-         # Save Spectral report log file
-      - name: Save Spectral report log
-        if: ${{ success() }} || ${{ failure() }}
-        run: |
-          mkdir -p spectral-report
-          cp spectral.log spectral-report/spectral.log
-      # Upload MegaLinter artifacts
-      - name: Archive production artifacts
-        if: ${{ success() }} || ${{ failure() }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: Spectral report
-          path: |
-            spectral-report
-            spectral.log
-          
+        run: spectral lint code/API_definitions/*.yaml --verbose --ruleset .spectral.yml
