--- a/artifacts/linting_rules/.github/workflows/spectral_oas_lint.yml
+++ b/artifacts/linting_rules/.github/workflows/spectral_oas_lint.yml
@@ -32,5 +32,5 @@ jobs:
         run: npm install -g @stoplight/spectral
       - name: Install Spectral functions
         run: npm install -g @stoplight/spectral-functions
-      - name: Run spectral:oas Spectral Linting
+      - name: Run Spectral linting
         run: spectral lint code/API_definitions/*.yaml --verbose --ruleset .spectral.yml
