--- a/artifacts/linting_rules/.gherkin-lintrc
+++ b/artifacts/linting_rules/.gherkin-lintrc
@@ -5,7 +5,23 @@
   "no-dupe-scenario-names": ["on", "in-feature"],
   "no-dupe-feature-names": "on",
   "no-partially-commented-tag-lines": "on",
-  "indentation": "off",
+  "indentation" : [
+    "on", {
+      "Feature": 0,
+      "Background": 0,
+      "Scenario": 2,
+      "Step": 2,
+      "Examples": 4,
+      "example": 4,
+      "given": 4,
+      "when": 4,
+      "then": 4,
+      "and": 4,
+      "but": 4,
+      "feature tag": 2,
+      "scenario tag": 2
+    }
+  ],
   "no-trailing-spaces": "on",
   "new-line-at-eof": ["on", "no"],
   "no-multiple-empty-lines": "on",
